compiler/tests/errortests/private_fields.txt
FILENAME:8:18: error: Field 'field' is private and cannot be accessed from this module.
    println(test.field); // Error: field is private
                 ^----
FILENAME:9:18: error: Field 'other' is private and cannot be accessed from this module.
    println(test.other); // Error: field is private
                 ^----
FILENAME:8:5: error: Function 'println' called with incorrect arguments.
    println(test.field); // Error: field is private
    ^------
FILENAME:9:5: error: Function 'println' called with incorrect arguments.
    println(test.other); // Error: field is private
    ^------
FILENAME:8:18: error: Type mismatch for argument 1 in function 'println': expected 'string', but got 'unknown'.
    println(test.field); // Error: field is private
                 ^----
FILENAME:9:18: error: Type mismatch for argument 1 in function 'println': expected 'string', but got 'unknown'.
    println(test.other); // Error: field is private
                 ^----
